# humanode

./: .dockerignore  .gitattributes  .gitignore  .prettierignore  .yarnrc.yml  Cargo.toml  Dockerfile  README.md  SECURITY.md  Substrate.md  clippy.toml  deny.toml  depversions.sh  docker-bake.hcl  local.json  package.json  pallet_bioauth.rs  qq.txt  rust-toolchain.toml  rustfmt.toml  state.json  taplo.toml  test.json  testr.json  tmp.json  tomlfmt.toml  typos.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/scripts/: artifact-upload-params.sh  cargoUtils.js  cargo_run.sh  plan.js  protoc.sh
.github/workflows/: build.yml  code.yml  code.yml.bak  dependabot.yml  docker.yml  docker.yml.bak  toml.yml
.maintain/: README.md  frame-weight-template.hbs
crates/author-ext/: Cargo.toml
crates/author-ext-api/: Cargo.toml
crates/author-ext-api/src/: lib.rs
crates/author-ext-rpc/: Cargo.toml
crates/author-ext-rpc/src/: error_data.rs  lib.rs
crates/author-ext-rpc/src/errors/: get_validator_public_key.rs  mod.rs  runtime_api.rs  set_keys.rs  tx_pool.rs
crates/author-ext/src/: lib.rs  rpc.rs
crates/bioauth-consensus/: Cargo.toml
crates/bioauth-consensus-api/: Cargo.toml
crates/bioauth-consensus-api/src/: lib.rs
crates/bioauth-consensus/src/: api.rs  aura.rs  author_validation.rs  babe.rs  bioauth.rs  flow.rs  keystore.rs  lib.rs  mock.rs  runtime.rs  slot.rs  tests.rs  traits.rs
crates/bioauth-flow/: Cargo.toml
crates/bioauth-flow-api/: Cargo.toml
crates/bioauth-flow-api/src/: lib.rs
crates/bioauth-flow-rpc/: Cargo.toml
crates/bioauth-flow-rpc/src/: config.rs  data.rs  error_data.rs  lib.rs  signer.rs  status.rs
crates/bioauth-flow-rpc/src/error/: code.rs  data.rs  mod.rs  shared.rs  sign.rs
crates/bioauth-flow-rpc/src/errors/: authenticate.rs  authenticate_v2.rs  enroll.rs  enroll_v2.rs  get_facetec_device_sdk_params.rs  get_facetec_session_token.rs  mod.rs  robonode.rs  robonode_request.rs  runtime_api.rs  shared.rs  sign.rs  signer.rs  status.rs  tx_not_finalized.rs  tx_pool.rs  validator.rs
crates/bioauth-flow-rpc/src/method/: authenticate.rs  authenticate_v2.rs  enroll.rs  enroll_v2.rs  get_facetec_device_sdk_params.rs  get_facetec_session_token.rs  mod.rs  status.rs
crates/bioauth-flow/src/: flow.rs  handler.rs  lib.rs  rpc.rs  transaction_manager.rs
crates/bioauth-id/: Cargo.toml
crates/bioauth-id-api/: Cargo.toml
crates/bioauth-id/src/: lib.rs
crates/bioauth-keys/: Cargo.toml
crates/bioauth-keys/src/: lib.rs  traits.rs
crates/bridge-pot-currency-swap/: Cargo.toml
crates/bridge-pot-currency-swap/src/: existence_optional.rs  existence_required.rs  lib.rs
crates/chain-properties/: Cargo.toml
crates/chain-properties-api/: Cargo.toml
crates/chain-properties-api/src/: lib.rs
crates/crypto-utils/: Cargo.toml
crates/crypto-utils-evm/: Cargo.toml
crates/crypto-utils-evm/src/: lib.rs
crates/crypto-utils/src/: account.rs  lib.rs  storage.rs
crates/devutil-auth-ticket/: Cargo.toml
crates/eip191-common/: Cargo.toml
crates/eip191-common/src/: lib.rs
crates/eip191-crypto/: Cargo.toml
crates/eip191-crypto/src/: lib.rs
crates/eip191-token-claim/: Cargo.toml
crates/eip191-token-claim/src/: lib.rs
crates/eip712/: Cargo.toml
crates/eip712-account-claim/: Cargo.toml
crates/eip712-account-claim/src/: lib.rs
crates/eip712-common/: Cargo.toml
crates/eip712-common-test-utils/: Cargo.toml
crates/eip712-common-test-utils/src/: lib.rs
crates/eip712-common/src/: lib.rs
crates/eip712-token-claim/: Cargo.toml
crates/eip712-token-claim/src/: lib.rs
crates/eip712/src/: domain.rs  lib.rs
crates/eth-personal-sign-common/: Cargo.toml
crates/evm-debug-api/: Cargo.toml
crates/evm-nonces-recovery/: Cargo.toml
crates/evm-nonces-recovery/src/: lib.rs
crates/evm-tracer/: Cargo.toml
crates/evm-tracer/src/: lib.rs
crates/evm-tracing-api/: Cargo.toml
crates/evm-tracing-api/src/: lib.rs
crates/evm-tracing-client/: Cargo.toml
crates/evm-tracing-client/src/: lib.rs  serialization.rs  utils.rs
crates/evm-tracing-client/src/formatters/: blockscout.rs  call_tracer.rs  mod.rs  raw.rs  trace_filter.rs
crates/evm-tracing-client/src/listeners/: call_list.rs  mod.rs  raw.rs
crates/evm-tracing-client/src/types/: block.rs  blockscout.rs  call_tracer.rs  mod.rs  single.rs
crates/evm-tracing-events/: Cargo.toml
crates/evm-tracing-host-api/: Cargo.toml
crates/evm-tracing-host-api/src/: lib.rs
crates/evm-tracing-rpc/: Cargo.toml
crates/evm-tracing-rpc/src/: lib.rs  types.rs
crates/evm-tracing-rpc/src/debug/: core.rs  handler.rs  mod.rs
crates/evm-tracing-rpc/src/trace/: cache_requester.rs  cache_task.rs  core.rs  mod.rs
crates/facetec-api-client/: Cargo.toml
crates/frontier-api/: Cargo.toml
crates/humanode-peer/: Cargo.toml  build.rs
crates/humanode-rpc/: Cargo.toml
crates/humanode-rpc-errors/: Cargo.toml
crates/humanode-runtime/: Cargo.toml  build.rs
crates/humanode-runtime-wasm-builder/: Cargo.toml  build.rs
crates/keystore-account-id/: Cargo.toml
crates/keystore-bioauth-account-id/: Cargo.toml
crates/native-chain-id/: Cargo.toml
crates/native-chain-id-api/: Cargo.toml
crates/ngrok-api/: Cargo.toml
crates/pallet-balanced-currency-swap-bridges-initializer/: Cargo.toml
crates/pallet-bioauth/: Cargo.toml
crates/pallet-bioauth-session/: Cargo.toml
crates/pallet-bootnodes/: Cargo.toml
crates/pallet-claims/: Cargo.toml
docker/: Dockerfile.builder  Dockerfile.runtime  build.sh  tag-and-push.sh
docs/: EVM.md
facetec-api-client/: Cargo.toml
facetec-api-client/src/: db_enroll.rs  db_search.rs  enrollment3d.rs  lib.rs  types.rs
humanode-types-js/: .prettierignore  index.ts  package.json  tsconfig.json
junk/: run-chain  run-chain-dev  send-tx  tx-failed.txt  tx-success.txt
robonode-client/: Cargo.toml
robonode-server/: Cargo.toml
utils/: make-release-archive  patch-forked-spec  runchain
zombienet/: run-tests.sh
zombienet-test/: alice.yaml  batumi.yaml  bob.yaml  local-plain.json  namespace  temp-1.yaml  temp.yaml  zombie-wrapper.sh  zombie.json
(+754 files in other folders)
