[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.metadata.cargo-machete]
ignored = ["codec", "scale-info", "num_enum"]

[workspace.dependencies]
# Crates.io deps.

anyhow = { version = "1", default-features = false }
ark-bls12-381 = { version = "0.4", default-features = false, features = ["curve"] }
ark-ec = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-std = { version = "0.4", default-features = false }
assert_matches = { version = "1.5", default-features = false }
async-trait = { version = "0.1", default-features = false }
bip32 = { version = "0.5.2", default-features = false }
bytes = { version = "1", default-features = false }
chrono = { version = "0.4", default-features = false }
clap = { version = "4", default-features = false }
ed25519-dalek = { version = "2", default-features = false }
ethereum = { version = "0.14", default-features = false }
ethers-core = { version = "2.0.14", default-features = false }
evm = { git = "https://github.com/rust-blockchain/evm", rev = "b7b82c7e1fc57b7449d6dfa6826600de37cc1e65", default-features = false }
fdlimit = { version = "0.2", default-features = false }
futures = { version = "0.3", default-features = false }
getrandom = { version = "0.2", default-features = false }
hex = { version = "0.4", default-features = false }
hex-literal = { version = "0.4", default-features = false }
http = { version = "0.2", default-features = false }
http-body = { version = "0.4", default-features = false }
impl-trait-for-tuples = { version = "0.2", default-features = false }
indoc = { version = "2.0", default-features = false }
jsonrpsee = { version = "0.16.3", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false }
log = { version = "0.4", default-features = false }
mockall = { version = "0.11", default-features = false }
num = { version = "0.4", default-features = false }
num_enum = { version = "0.7", default-features = false }
num-traits = { version = "0.2", default-features = false }
numtoa = { version = "0.2", default-features = false }
once_cell = { version = "1", default-features = false }
proc-macro2 = { version = "1", default-features = false }
qr2term = { version = "0.3", default-features = false }
quote = { version = "1.0", default-features = false }
rand = { version = "0.8", default-features = false }
reqwest = { version = "0.11", default-features = false }
rustc-hex = { version = "2", default-features = false }
scale-info = { version = "2.11.3", default-features = false }
secp256k1 = { version = "0.27", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
sha3 = { version = "0.10", default-features = false }
similar-asserts = { version = "1", default-features = false }
static_assertions = { version = "1", default-features = false }
syn = { version = "2", default-features = false }
thiserror = { version = "1.0.63", default-features = false }
tiny-bip39 = { version = "1", default-features = false }
tokio = { version = "1", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-test = { version = "0.2", default-features = false }
url = { version = "2", default-features = false }
uuid = { version = "1", default-features = false }
vergen = { version = "8", default-features = false }
warp = { version = "0.3", default-features = false }
wiremock = { version = "0.5", default-features = false }

# Special case for codec.
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }

# Substrate fork.
frame-benchmarking = { version = "*", registry = "substrate", default-features = false }
frame-benchmarking-cli = { version = "*", registry = "substrate", default-features = false }
frame-executive = { version = "*", registry = "substrate", default-features = false }
frame-support = { version = "*", registry = "substrate", default-features = false }
frame-system = { version = "*", registry = "substrate", default-features = false }
frame-system-benchmarking = { version = "*", registry = "substrate", default-features = false }
frame-system-rpc-runtime-api = { version = "*", registry = "substrate", default-features = false }
frame-try-runtime = { version = "*", registry = "substrate", default-features = false }
pallet-authorship = { version = "*", registry = "substrate", default-features = false }
pallet-babe = { version = "*", registry = "substrate", default-features = false }
pallet-balances = { version = "*", registry = "substrate", default-features = false }
pallet-grandpa = { version = "*", registry = "substrate", default-features = false }
pallet-im-online = { version = "*", registry = "substrate", default-features = false }
pallet-multisig = { version = "*", registry = "substrate", default-features = false }
pallet-offences = { version = "*", registry = "substrate", default-features = false }
pallet-session = { version = "*", registry = "substrate", default-features = false }
pallet-sudo = { version = "*", registry = "substrate", default-features = false }
pallet-timestamp = { version = "*", registry = "substrate", default-features = false }
pallet-transaction-payment = { version = "*", registry = "substrate", default-features = false }
pallet-transaction-payment-rpc = { version = "*", registry = "substrate", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "*", registry = "substrate", default-features = false }
pallet-utility = { version = "*", registry = "substrate", default-features = false }
sc-basic-authorship = { version = "*", registry = "substrate", default-features = false }
sc-chain-spec = { version = "*", registry = "substrate", default-features = false }
sc-chain-spec-derive = { version = "*", registry = "substrate", default-features = false }
sc-cli = { version = "*", registry = "substrate", default-features = false }
sc-client-api = { version = "*", registry = "substrate", default-features = false }
sc-consensus = { version = "*", registry = "substrate", default-features = false }
sc-consensus-babe = { version = "*", registry = "substrate", default-features = false }
sc-consensus-babe-rpc = { version = "*", registry = "substrate", default-features = false }
sc-consensus-epochs = { version = "*", registry = "substrate", default-features = false }
sc-consensus-grandpa = { version = "*", registry = "substrate", default-features = false }
sc-consensus-grandpa-rpc = { version = "*", registry = "substrate", default-features = false }
sc-executor = { version = "*", registry = "substrate", default-features = false }
sc-network = { version = "*", registry = "substrate", default-features = false }
sc-network-sync = { version = "*", registry = "substrate", default-features = false }
sc-rpc = { version = "*", registry = "substrate", default-features = false }
sc-rpc-api = { version = "*", registry = "substrate", default-features = false }
sc-rpc-spec-v2 = { version = "*", registry = "substrate", default-features = false }
sc-service = { version = "*", registry = "substrate", default-features = false }
sc-telemetry = { version = "*", registry = "substrate", default-features = false }
sc-tracing = { version = "*", registry = "substrate", default-features = false }
sc-transaction-pool = { version = "*", registry = "substrate", default-features = false }
sc-transaction-pool-api = { version = "*", registry = "substrate", default-features = false }
sc-utils = { version = "*", registry = "substrate", default-features = false }
sp-api = { version = "*", registry = "substrate", default-features = false }
sp-application-crypto = { version = "*", registry = "substrate", default-features = false }
sp-block-builder = { version = "*", registry = "substrate", default-features = false }
sp-blockchain = { version = "*", registry = "substrate", default-features = false }
sp-consensus = { version = "*", registry = "substrate", default-features = false }
sp-consensus-babe = { version = "*", registry = "substrate", default-features = false }
sp-consensus-grandpa = { version = "*", registry = "substrate", default-features = false }
sp-core = { version = "*", registry = "substrate", default-features = false }
sp-core-hashing-proc-macro = { version = "*", registry = "substrate", default-features = false }
sp-inherents = { version = "*", registry = "substrate", default-features = false }
sp-io = { version = "*", registry = "substrate", default-features = false }
sp-keyring = { version = "*", registry = "substrate", default-features = false }
sp-keystore = { version = "*", registry = "substrate", default-features = false }
sp-offchain = { version = "*", registry = "substrate", default-features = false }
sp-panic-handler = { version = "*", registry = "substrate", default-features = false }
sp-runtime = { version = "*", registry = "substrate", default-features = false }
sp-session = { version = "*", registry = "substrate", default-features = false }
sp-staking = { version = "*", registry = "substrate", default-features = false }
sp-std = { version = "*", registry = "substrate", default-features = false }
sp-timestamp = { version = "*", registry = "substrate", default-features = false }
sp-tracing = { version = "*", registry = "substrate", default-features = false }
sp-transaction-pool = { version = "*", registry = "substrate", default-features = false }
sp-version = { version = "*", registry = "substrate", default-features = false }
substrate-frame-rpc-system = { version = "*", registry = "substrate", default-features = false }
substrate-wasm-builder = { version = "*", registry = "substrate", default-features = false }
try-runtime-cli = { version = "*", registry = "substrate", default-features = false }

# Frontier fork.
fc-cli = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }
fc-consensus = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }
fc-db = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }
fc-mapping-sync = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }
fc-rpc = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }
fc-rpc-core = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }
fc-storage = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }
fp-evm = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }
fp-rpc = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }
fp-self-contained = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }
fp-storage = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }
pallet-ethereum = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }
pallet-evm = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }
pallet-evm-balances = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }
pallet-evm-precompile-blake2 = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }
pallet-evm-system = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }
pallet-evm-test-vector-support = { git = "https://github.com/humanode-network/frontier", tag = "locked/polkadot-v0.9.40-2024-08-02", default-features = false }

[profile.release]
debug = "line-tables-only"

[profile.release-lto]
inherits = "release"
lto = "thin"
