[package]
name = "facetec-api-client"
version = "0.1.0"
edition = "2018"
authors = ["Humanode Team <core@humanode.io>"]
publish = false

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
serde_json = "1"
